# crvrsworld-jupyter-nbstripout

./: README.md  notebook.ipynb  pyproject.toml  requirements.txt
